A-020 - Add tests and improve logic